--- a/backend/package.json
+++ b/backend/package.json
@@ -14,21 +14,22 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "socket.io": "^4.7.2",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.7.0",
     "redis": "^4.6.13",
-    "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.1.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0"
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.6",
     "@types/bcryptjs": "^2.4.6",
-    "typescript": "^5.3.3",
-    "ts-node": "^10.9.2"
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.10.6",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
